style: fix some align in about me page

--- a/src/pages/about-me/AboutMe.css
+++ b/src/pages/about-me/AboutMe.css
@@ -11,6 +11,7 @@
 
     .roge-name-div {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         background-color: #171515;
@@ -20,17 +21,16 @@
         min-width: 200px;
         border-radius: 50%;
         align-self: center;
-        margin-left: -45px;
+        margin-left: -100px;
         z-index: 1;
     }
 
     .about-me-roge-name {
-        width: 100px;
+        max-width: 150px;
         font-size: 40px;
         font-family: Arial, Helvetica, sans-serif;
         -webkit-text-stroke: 1.5px #5E17EB;
         color: white;
-        margin-left: -15px;
     }
 
     .about-me-text-div {
@@ -58,7 +58,7 @@
             height: 150px;
             min-width: 150px;
             border-radius: 50%;
-            margin-top: -90px;
+            margin-top: -70px;
             margin-left: 3px;
         }
     
@@ -130,7 +130,7 @@
     }
 
     .about-me-roge-name {
-        width: 100px;
+        max-width: 115px;
         font-size: 40px;
         font-family: Arial, Helvetica, sans-serif;
         -webkit-text-stroke: 1.5px #5E17EB;
